<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:padding="@dimen/dim12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim12"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dim6"
                android:layout_weight="0.5"
                app:cardCornerRadius="@dimen/dim6"
                app:cardElevation="@dimen/dim6">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/dim6">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_age_info"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/txt_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dim2"
                        android:layout_marginBottom="@dimen/dim2"
                        android:text="@string/txt_age"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/txt22"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img_minus_age"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:src="@drawable/ic_outline_remove_circle_outline_24" />

                        <ImageView
                            android:id="@+id/img_add_age"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:src="@drawable/ic_baseline_add_circle_outline_24" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim6"
                android:layout_weight="0.5"
                app:cardCornerRadius="@dimen/dim6"
                app:cardElevation="@dimen/dim6">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/dim6">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_weight_info"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/txt_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dim2"
                        android:layout_marginBottom="@dimen/dim2"
                        android:text="@string/txt_weight"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/txt22"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img_minus_weight"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:src="@drawable/ic_outline_remove_circle_outline_24" />

                        <ImageView
                            android:id="@+id/img_add_weight"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:src="@drawable/ic_baseline_add_circle_outline_24" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim12"
            app:cardCornerRadius="@dimen/dim6"
            app:cardElevation="@dimen/dim6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dim6">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_height_info"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/txt_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dim2"
                    android:layout_marginBottom="@dimen/dim2"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txt22"
                    android:textStyle="bold"
                    tools:text="180" />

                <SeekBar
                    android:id="@+id/seekbar_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_calculate_bmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_btn_calculate"
            android:text="@string/txt_calculate_bmi"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>